--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,9 @@ CHANGE NOTES FOR 0.1.3 (RELEASED: -)
 
 GENERAL CHANGES:
 
+- Function `Wait And Ingore Request` to ignore incoming request by closing connection (HttpCtrl.Server).
+  See: https://github.com/annoviko/robotframework-httpctrl/issues/8
+
 - Optimized termination of the HTTP(S) server - problem with up-to 5 seconds delay (HttpCtrl.Server).
   See: https://github.com/annoviko/robotframework-httpctrl/issues/7
 
@@ -14,6 +17,11 @@ GENERAL CHANGES:
 
 - Functions `Send HTTPS Request Async` and `Send HTTP Request Async` must returns connection (HttpCtrl.Client).
   See: https://github.com/annoviko/robotframework-httpctrl/issues/5
+
+CORRECTED MAJOR BUGS:
+
+- Fixed bug where function `Wait For No Requests` ignored input timeout and always uses 5 seconds (HttpCtrl.Server).
+  See: https://github.com/annoviko/robotframework-httpctrl/issues/6
 
 
 ------------------------------------------------------------------------
