--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 ------------------------------------------------------------------------
 
-CHANGE NOTES FOR 0.1.3 (RELEASED: -)
+CHANGE NOTES FOR 0.1.3 (RELEASED: Oct 25, 2019)
 
 ------------------------------------------------------------------------
 
