--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,17 @@
 ------------------------------------------------------------------------
 
+CHANGE NOTES FOR 0.1.4 (RELEASED: Jan 13, 2020)
+
+------------------------------------------------------------------------
+
+GENERAL CHANGES:
+
+- Introduced argument `timeout` for function `Wait For Request` to specify waiting time (HttpCtrl.Server).
+  See: https://github.com/annoviko/robotframework-httpctrl/issues/11
+
+
+------------------------------------------------------------------------
+
 CHANGE NOTES FOR 0.1.3 (RELEASED: Oct 25, 2019)
 
 ------------------------------------------------------------------------
