#10: setup.py correction.

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,17 @@
 ------------------------------------------------------------------------
 
+CHANGE NOTES FOR 0.1.5 (RELEASED: Jan 13, 2020)
+
+------------------------------------------------------------------------
+
+GENERAL CHANGES:
+
+- Missing package in setup.py.
+  See: https://github.com/annoviko/robotframework-httpctrl/issues/10
+
+
+------------------------------------------------------------------------
+
 CHANGE NOTES FOR 0.1.4 (RELEASED: Jan 13, 2020)
 
 ------------------------------------------------------------------------
