--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,9 @@ CHANGE NOTES FOR 0.2.0 (RELEASED: Oct 8, 2021)
 
 GENERAL CHANGES
 
+- Change license to The 3-Clause BSD License.
+  no-ref
+
 - Feature to release the library automatically.
   https://github.com/annoviko/robotframework-httpctrl/issues/14
 
