#26: Update release meta-information (some artifacts from GNU public license were found).

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,17 @@
 ------------------------------------------------------------------------
 
+CHANGE NOTES FOR 0.2.1 (RELEASED: Oct 8, 2021)
+
+------------------------------------------------------------------------
+
+GENERAL CHANGES
+
+- Change license to The 3-Clause BSD License.
+  https://github.com/annoviko/robotframework-httpctrl/issues/26
+
+
+------------------------------------------------------------------------
+
 CHANGE NOTES FOR 0.2.0 (RELEASED: Oct 8, 2021)
 
 ------------------------------------------------------------------------
