#44: switch to pyproject.toml.

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,17 @@
 ------------------------------------------------------------------------
 
+CHANGE NOTES FOR 0.3.2 (RELEASED: Sep 11, 2025)
+
+------------------------------------------------------------------------
+
+GENERAL CHANGES
+
+- Add pyproject.toml to support modern PEP 517/518 builds. Retains setup.py for backwards compatibility.
+  See: https://github.com/annoviko/robotframework-httpctrl/issues/44
+
+
+------------------------------------------------------------------------
+
 CHANGE NOTES FOR 0.3.1 (RELEASED: Dec 3, 2022)
 
 ------------------------------------------------------------------------
